Reduce API, fix API types, clean some code
