# api/methods.go
@@ -12,7 +12,7 @@ import (
 
 func (r ReqWT) Less(other queue.Comparable) bool {
 	otherR := other.(*ReqWGT)
-	return r.Time.Before(*otherR.Time)
+	return r.Time.Before(otherR.Time)
 }
 
 // Request with generation time
@@ -31,11 +31,11 @@ func (r *ReqWT) String() string {
 	return r.Request.String() + "WithTime[" + r.Time.String() + "]"
 }
 
-func (r *Request) String() string {
-	return "Req[" + strconv.Itoa(*r.SourceNumber) + "." + strconv.Itoa(*r.RequestNumber) + "]"
+func (r *ReqWSE) String() string {
+	return r.Request.String() + "Start[" + r.Start.String() + "]" +
+		"End[" + r.End.String() + "]"
 }
 
-// func ReqToString(apiReq *api.Request) string {
-// 	var req Request = Request(*apiReq)
-// 	return req.String()
-// }
+func (r *Request) String() string {
+	return "Req[" + strconv.Itoa(r.SourceNumber) + "." + strconv.Itoa(r.RequestNumber) + "]"
+}
